Add migrations and models

--- a/Vidly/appsettings.json
+++ b/Vidly/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=vidly;Integrated Security=true;",
+  },
   "AllowedHosts": "*"
 }
