--- a/Vidly/appsettings.json
+++ b/Vidly/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=vidly;Integrated Security=true;",
+    "default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=vidly;Integrated Security=true;"
   },
   "AllowedHosts": "*"
 }
